# f1-telemetry-tui

./: Cargo.toml  README.md
src/: app.rs  main.rs
